# CMakeDemo

./: .travis.yml  CMakeLists.txt  README.md
Demo/: CMakeLists.txt
Hello/: CMakeLists.txt
Hello/src/: hello.cpp
demo/: CMakeLists.txt  demo.cpp
demo/say/: CMakeLists.txt  say.cpp  say.h
hello/: CMakeLists.txt
hello/res/: resources.h
hello/src/: hello.cpp
